# tenrec-fastformer

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: ddp8_p0_p3_playbook.md  repo_upload_scope.md
rust_pipeline/: Cargo.toml  build.sh
rust_pipeline/src/: category_filter.rs  feature_engine.rs  filters.rs  history_encoder.rs  lib.rs  multi_task_scorer.rs  negative_sampler.rs  post_store.rs  scorers.rs  user_profile.rs
tenrec_adapter/: __init__.py  app.py  checkpoint_manager.py  config_manager.py  data_loader.py  device_utils.py  eval_cache.py  fastformer.py  inference_demo.py  metrics.py  models.py  phoenix_adapter.py  ranking_model.py  recommendation_pipeline.py  run_ddp_train.py  run_two_stage_train.py  rust_components.py  tensorboard_logger.py
tenrec_adapter/configs/: default.yaml  qk_video_large.yaml
tenrec_adapter/scripts/: TRAINING_GUIDE.md  check_server_env.sh  convert_tenrec_csv_to_parquet.py  debug_docker_streamlit_8501.sh  recreate_zhl_container_8mlu.sh  run_ctr1m_ddp8_full_train.sh  run_ctr1m_ddp8_mincost_matrix.sh  run_ctr1m_ddp8_p0_p3.sh  run_ctr1m_ddp_7gpu.sh  run_ctr1m_ranking.sh  run_ctr1m_retrieval.sh  setup_server.sh  start_streamlit_in_docker.sh
tenrec_adapter/tests/: test_eval_cache_v4.py
