[project]
name = "tenrec-fastformer"
version = "1.0.0"
description = "Fastformer-based Two-Stage Recommendation System on Tenrec Dataset"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["recommendation-system", "fastformer", "tenrec", "deep-learning", "ctr-prediction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "tqdm",
    "pyyaml",
    "scikit-learn",
]

[project.optional-dependencies]
mlu = ["torch_mlu"]
tensorboard = ["tensorboard"]
dev = ["pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["tenrec_adapter*"]

[tool.pytest.ini_options]
testpaths = ["tenrec_adapter/tests"]
python_files = ["test_*.py"]
